# github-trends

./: .coverage  .coveragerc  .deepsource.toml  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  cloudbuild.yaml  cloudbuild_pub.yaml  cloudbuild_sub.yaml  codecov.yaml  docker-compose.yaml  main.py  pyproject.toml
backend/: .coveragerc  .env-template  .flake8  .gcloudignore  .pre-commit-config.yaml  .sourcery.yaml  README.md  app.yaml  app_pub.yaml  app_sub.yaml  constants.py  delete_old_data.py  dispatch.yaml  main.py  package.json  pub.Dockerfile  pyproject.toml  requirements.txt  sub.Dockerfile  transfer_mongodb.bash
backend/analytics/user/: commits.py  contribs_per_day.py  contribution_calendar.py
backend/coverage/: README.md
backend/deploy/: Dockerfile  app.yaml  app_pub.yaml  app_sub.yaml  cloudbuild.yaml  cloudbuild_pub.yaml  cloudbuild_sub.yaml  dispatch.yaml  pub.Dockerfile  pubsub.Dockerfile  sub.Dockerfile
backend/endpoints/: github_auth.py  user.py
backend/helper/: gather.py
backend/models/misc/: date.py
backend/models/user/: commit_contributions_by_repository.py  contribs.py  contribution_calendar.py  follows.py  package.py  user.py
backend/packaging/: user.py
backend/processing/: commit.py
backend/processing/commit/: commits.py  extensions.json
backend/processing/user/: commit_contributions_by_repository.py  contribution_calendar.py  contribution_commits.py  contribution_stats.py  contributions.py  follows.py
backend/scripts/: delete_old_data.py  local.py
backend/src/: constants.py  decorators.py  main.py  main_pub.py  main_sub.py  utils.py
backend/src/aggregation/layer0/: __init__.py  contributions.py  follows.py  languages.py  package.py
backend/src/aggregation/layer1/: __init__.py  auth.py  user.py
backend/src/db/: mongodb.py
backend/src/endpoints/: github_auth.py  user.py
backend/src/helper/: alru_cache.py  decorators.py  utils.py
backend/src/models/: __init__.py  background.py
backend/src/packaging/: user.py
backend/src/processing/: auth.py  commit.py
backend/src/render/: __init__.py  error.py  style.py  template.py  top_langs.py  top_repos.py
backend/src/routers/: __init__.py  assets.py  auth.py  background.py  decorators.py  dev.py  pubsub.py  users.py  users_dev.py  wrapped.py
backend/src/svg/: error.py  style.py  template.py  top_langs.py  top_repos.py
backend/src/utils/: __init__.py  alru_cache.py  decorators.py  pubsub.py  utils.py
backend/tests/: __init__.py
backend/tests/helper/: test_alru_cache.py
backend/tests/packaging/: test_user.py
backend/tests/utils/: test_alru_cache.py
(+346 files in other folders)
