[tool.poetry]
name = "github-trends"
version = "0.1.0"
description = ""
authors = ["Abhijit Gupta <avgupta456@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
requests = "^2.31.0"
python-dotenv = "^1.0.0"
motor = "^3.3.1"
aiofiles = "^23.2.1"
aiounittest = "^1.4.2"
coveralls = "^3.3.1"
grpcio = "^1.59.2"
gunicorn = "^21.2.0"
pymongo = {extras = ["srv"], version = "^4.6.0"}
pytz = "^2023.3.post1"
sentry-sdk = "^1.34.0"
svgwrite = "^1.4.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pyinstrument = "^4.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
